[gd_scene load_steps=8 format=3 uid="uid://c81kuvl7kvkm3"]

[ext_resource type="Script" path="res://Scripts/BuildingClass.gd" id="1_m82f2"]
[ext_resource type="Texture2D" uid="uid://diawy2r4hqwlo" path="res://Assets/buildings/nuclear powerplant/1.png" id="2_dfg6m"]
[ext_resource type="Texture2D" uid="uid://dx17tcti1rvhm" path="res://Assets/buildings/nuclear powerplant/2.png" id="3_21ojs"]
[ext_resource type="Texture2D" uid="uid://c1l50iwas1bdn" path="res://Assets/buildings/nuclear powerplant/3.png" id="4_wstkb"]
[ext_resource type="Texture2D" uid="uid://cnjyojk4gnglt" path="res://Assets/buildings/nuclear powerplant/4.png" id="5_4cmhq"]

[sub_resource type="SpriteFrames" id="SpriteFrames_yrtqw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_dfg6m")
}],
"loop": true,
"name": &"level1",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_21ojs")
}],
"loop": true,
"name": &"level2",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_wstkb")
}],
"loop": true,
"name": &"level3",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_4cmhq")
}],
"loop": true,
"name": &"level4",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nupnb"]
size = Vector2(68, 197)

[node name="Coalpowerplant" type="Node2D"]
script = ExtResource("1_m82f2")
Name = "nuclear"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-6, -30)
scale = Vector2(0.25388, 0.25388)
sprite_frames = SubResource("SpriteFrames_yrtqw")
animation = &"level4"
autoplay = "level1"
offset = Vector2(25, 40)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-4, -69.5)
shape = SubResource("RectangleShape2D_nupnb")

[node name="fullyUpgradedLabel" type="Label" parent="Area2D"]
visible = false
offset_left = -154.0
offset_top = -204.0
offset_right = 146.0
offset_bottom = -148.0
text = "Power source is already fully upgraded"

[node name="UpgradePopupMenu" type="PopupMenu" parent="."]
size = Vector2i(181, 100)
visible = true

[node name="Label" type="Label" parent="UpgradePopupMenu"]
offset_right = 40.0
offset_bottom = 23.0
text = "Upgade?"

[connection signal="id_pressed" from="UpgradePopupMenu" to="." method="_on_upgrade_popup_menu_id_pressed"]
